<package format="2">
    <name>ogre_helpers</name>
    <version>0.1.0</version>
    <description>
        Ogre helper functions.
    </description>
    <maintainer email="andreas.reich@unibw.de">Andreas Reich</maintainer>
    <author email="andreas.reich@unibw.de">Andreas Reich</author>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>rviz</depend>
    <depend>libqt5-gui</depend>
</package>
